9_security/0_opa_gatekeeper/psp_rules/psp-host-filesystem.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostFilesystem
metadata:
  name: psp-host-filesystem
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    allowedHostPaths:
      # - readOnly: true
      #   pathPrefix: "/foo"
      - pathPrefix: "/var/lib/lxcfs"
